# fault_tolerant_image_processing

./: .env  .gitignore  Cargo.toml  readme.md
.github/workflows/: rust.yml
migrations/: V1__setup.sql
migrations/2023-05-17-110037_addUserTable/: down.sql  up.sql
migrations/2023-05-17-122331_addNewTable/: down.sql  up.sql
src/: engine.rs  logs_table.rs  main.rs  schema.rs  temp.rs  tests_common.rs
src/database/: common.rs  migration.rs  mod.rs  schema.rs
src/database/repositories/: task.rs
src/journal/: mod.rs
src/processing/: data_loader.rs  file_loader.rs  job.rs  mod.rs  task.rs
src/processing/worker/: mod.rs  worker1.rs  worker2.rs
src/workers/: mod.rs  task.rs  worker.rs
