[package]
name = "fault_tolerant_image_processing"
version = "0.1.0"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.0.0", features = ["postgres"] }
diesel_migrations = { version = "2.0.0", features = ["postgres"] }
dotenvy = "0.15"
iced = "0.9" 
