[package]
name = "fault_tolerant_image_processing"
version = "0.1.0"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
postgres = "0.19.0"
postgres-derive = "0.4.4"
postgres-types = "0.2.0"
refinery = { version = "0.8", features = ["postgres"]}
dotenvy = "0.15"
iced = "0.9" 
image = "0.24.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.3.0", features = ["derive"] }